# btcr-DID-method

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindBitcoinApiCpp.cmake  FindJSONCPP.cmake
include/libtxref/: libtxref.h
integration/: CMakeLists.txt
libbech32/: CMakeLists.txt  bech32.cpp
libtxref/: CMakeLists.txt  txref.cpp
src/: CMakeLists.txt  bitcoinRPCFacade.cpp  bitcoinRPCFacade.h  chainQuery.h  chainSoQuery.cpp  chainSoQuery.h  createBtcrDid.cpp  curlWrapper.cpp  didResolver.cpp  didVerifier.cpp  encodeOpReturnData.cpp  encodeOpReturnData.h  satoshis.h  t2tSupport.cpp  t2tSupport.h  txid2txref.cpp  txid2txref.h
src/domain/: blockHeight.cpp  blockHeight.h  did.cpp  transactionIndex.cpp  transactionIndex.h  txid.cpp  txid.h  txref.cpp  txref.h  vout.cpp  vout.h
test/: CMakeLists.txt  mock_bitcoinRPCFacade.h  test_chainSoQuery.cpp  test_satoshis.cpp
test/rapidcheck/: CMakeLists.txt
test/testbech32/: CMakeLists.txt
test/testdomain/: CMakeLists.txt  main.cpp  test_Did.cpp  test_TransactionIndex.cpp  test_Txid.cpp  test_Txref.cpp
test/testtxref/: CMakeLists.txt  test_Txref.cpp  test_Txref_api.cpp  txref_c_api_tests.c
